# e2e

./: AGENTS.md
conductor/: CLAUDE.md  Cargo.toml  README.md  database.md  mcp.md  scripts.md  sessions.md  settings.md  workspaces.md
conductor/agent/: Cargo.toml
conductor/agent/src/: lib.rs
conductor/cli/: README.md  pyproject.toml
conductor/cli-rs/: Cargo.toml  README.md
conductor/cli-rs/src/: main.rs
conductor/cli/src/conductor_cli/: __init__.py  cli.py
conductor/core/: Cargo.toml
conductor/core/src/: lib.rs
conductor/daemon/: Cargo.toml  build.rs
conductor/daemon/proto/: conductor.proto
conductor/daemon/src/: lib.rs
conductor/desktop/: README.md  package-lock.json  package.json  vite.config.ts
conductor/desktop/src/: App.css  App.tsx  main.tsx  types.ts  utils.ts
conductor/desktop/src-tauri/: Cargo.toml  tauri.conf.json
conductor/desktop/src-tauri/src/: client.rs  lib.rs
conductor/desktop/src/components/: ChatPanel.tsx  CommandPalette.tsx  FilesPanel.tsx  Rail.tsx  ResizeHandle.tsx  TabsHeader.tsx  Terminal.tsx  WorkspacePanel.tsx
conductor/desktop/src/lib/: chat-parser.ts  hooks.ts  query.ts  tool-registry.tsx
