[project]
name = "conductor-cli"
version = "0.1.0"
description = "Conductor workspace manager"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
conductor = "conductor_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["conductor_cli"]

[tool.uv]
package = true
default-groups = ["dev"]

[dependency-groups]
dev = ["ruff>=0.8"]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "UP", "I", "ARG"]
ignore = [
  "E731",  # Do not assign a lambda expression, use a def
  "E722",  # Do not use bare 'except'
  "E741",  # Ambiguous variable name
]
