[package]
name = "conductor-daemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "conductor_daemon"
path = "src/lib.rs"

[[bin]]
name = "conductor-daemon"
path = "src/bin/daemon.rs"

[dependencies]
conductor-core = { path = "../core" }
conductor-agent = { path = "../agent" }

# gRPC
tonic = "0.12"
prost = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Process management
portable-pty = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
anyhow = "1"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"
