[package]
name = "desktop"
version = "0.1.0"
description = "Conductor desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
conductor-agent = { path = "../../agent" }
conductor-core = { path = "../../core" }
conductor-daemon = { path = "../../daemon" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "net"] }
tokio-stream = "0.1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }

# gRPC client
tonic = "0.12"
tower = "0.4"
hyper-util = "0.1"

# AI testing laboratory (debug builds only)
tauri-plugin-mcp = { path = "/Users/joshlevine/src/tries/2026-01-14-speed-reader/tauri-plugin-mcp" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
block = "0.1"
